--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
         <version>2.7.4</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.chainwo</groupId>
+    <groupId>com.heider</groupId>
     <artifactId>wallet-generator</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>wallet-generator</name>
